# vedette

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  manage.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements-tests.txt  requirements.txt
api/: exceptions.py  models.py  parsers.py  serializers.py  signatures.py  tasks.py  urls.py  views.py
api/tests/: test_serializers.py  test_signature.py
api/tests/tasks/: test_capture_event.py  test_process_event.py
api/tests/views/: test_store_event.py
envs/: env_template  env_tests
events/: admin.py  constants.py  managers.py  models.py  negotiation.py  parsers.py  querysets.py
events/management/commands/: createproject.py  deleteproject.py  getpublickey.py  removeoldevents.py
events/migrations/: 0001_initial.py  0002_auto_20210823_1654.py  0002_auto_20211114_2050.py  0003_event_events_search_vector_idx.py
events/tests/: factories.py
events/tests/managers/: test_event_manager.py  test_issue_manager.py
events/tests/models/: test_event.py  test_issues.py  test_raw_event.py
examples/: capture_error.py  requirements.txt
projects/: admin.py  models.py
projects/management/commands/: createproject.py  deleteproject.py  getpublickey.py
projects/migrations/: 0001_initial.py  0002_project_sentry_dsn.py  0003_remove_project_sentry_dsn.py
projects/tests/: factories.py
samples/events/: captured_event_with_extra_breadcrumps.json  captured_event_with_extra_context.json  captured_event_with_tags.json  captured_event_with_transaction_name.json  captured_event_with_user_data.json  captured_exception_using_logger.json  captured_exception_using_sdk.json  captured_message.json  captured_unhandled_exception.json
vedette/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
web/: urls.py  views.py
web/static/css/: style.css
web/templates/: base.html
web/templates/registration/: login.html
web/templates/web/: 400.html  base.html  (+1 more)
(+21 files in other folders)
