[tool.black]
line-length = 79
target-version = ['py39']
extend-exclude = '''
(
  ^/manage.py
  | ^/vedette/settings.py
  | ^/events/migrations/.*$
  | ^/projects/migrations/.*$
  | ^/web/migrations/.*$
  | ^/api/migrations/.*$
)
'''

[tool.poetry]
name = "vedette"
version = "0.1.0"
description = "Error tracking application"
authors = ["Matigakis Panagiotis <pmatigakis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
celery = "5.1.2"
Django = "3.2.6"
djangorestframework = "3.12.4"
psycopg2 = "2.9.1"
python-dotenv = "0.19.0"
redis = "3.5.3"
requests = "2.26.0"
gunicorn = "20.1.0"
whitenoise = "5.3.0"
dj-database-url = "0.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
coverage = "^6.2"
factory-boy = "^3.2.1"
freezegun = "^1.1.0"
isort = "5.9.3"
black = "21.9b0"
flake8 = "4.0.1"
bandit = "1.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
