[tool.black]
line-length = 79
target-version = ['py39']
extend-exclude = '''
(
  ^/manage.py
  | ^/vedette/settings.py
  | ^/events/migrations/.*$
  | ^/projects/migrations/.*$
  | ^/web/migrations/.*$
  | ^/api/migrations/.*$
)
'''

[tool.poetry]
name = "vedette"
version = "0.2.1"
description = "Error tracking application"
authors = ["Matigakis Panagiotis <pmatigakis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
celery = "5.3.0"
Django = "4.2.2"
djangorestframework = "3.14.0"
psycopg2 = "2.9.6"
python-dotenv = "1.0.0"
redis = "4.5.5"
requests = "2.31.0"
gunicorn = "20.1.0"
whitenoise = "6.4.0"
dj-database-url = "2.0.0"
tqdm = "4.65.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.3.2"
coverage = "7.2.7"
factory-boy = "3.2.1"
freezegun = "1.2.2"
isort = "5.12.0"
black = "23.3.0"
flake8 = "6.0.0"
bandit = "1.7.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
